# poetry-add-requirements.txt

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
poetry_add_requirements_txt/: __init__.py  cli.py  cli_uv.py  utils.py
tests/: req-real-deps.txt  req.txt  req2.txt  test-extra-args.sh  test-pip.sh  test_poetry_add_requirements_txt.py
